# TargetFinder

./: .gitignore  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: configs.xml
app/src/main/cpp/: JavaInterface.cpp  SoundGenerator.cpp
app/src/main/cpp/include/: JavaInterface.hpp  SoundGenerator.hpp
app/src/main/java/com/activis/jaycee/targetfinder/: ActivityCamera.java  ActivityMain.java  ActivityWelcome.java  ClassFrameCallback.java  ClassHelper.java  ClassInterfaceParameters.java  ClassMetrics.java  ClassRenderer.java  ClassScenePoseCalculator.java  ClassTangoUpdateCallback.java  JNINativeInterface.java  RunnableSoundGenerator.java  RunnableSpeechGenerator.java
app/src/main/res/layout/: activity_camera.xml  activity_main.xml  activity_welcome.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
wifi_tools/: pySock.py
wifi_tools/data_scripts/: read_cane_data.py
